# deribit_tracker

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 40f2c862f630_initial.py  d6f81e9a0cb1_rename_price_to_current_price.py
app/: main.py
app/api/: dependencies.py  routes.py
app/clients/: deribit_client.py
app/core/: config.py  database.py
app/models/: price.py
app/repositories/: price_repo.py
app/schemas/: price.py
app/services/: price_service.py
app/worker/: celery_app.py  tasks.py
tests/: conftest.py  test_api.py  test_services.py
